// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuCheckbox matches snapshot checked 1`] = `
<li
  class=""
  role="none"
>
  <a
    class="bp5-menu-item menu-checkbox"
    role="menuitem"
    tabindex="0"
  >
    <span
      class="bp5-menu-item-icon"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-standard bp5-icon-tick-circle"
        data-icon="tick-circle"
        tabindex="-1"
      />
    </span>
    <div
      class="bp5-text-overflow-ellipsis bp5-fill"
    >
      hello
    </div>
  </a>
</li>
`;

exports[`MenuCheckbox matches snapshot unchecked 1`] = `
<li
  class=""
  role="none"
>
  <a
    class="bp5-menu-item menu-checkbox"
    role="menuitem"
    tabindex="0"
  >
    <span
      class="bp5-menu-item-icon"
    >
      <span
        aria-hidden="true"
        class="bp5-icon bp5-icon-standard bp5-icon-circle"
        data-icon="circle"
        tabindex="-1"
      />
    </span>
    <div
      class="bp5-text-overflow-ellipsis bp5-fill"
    >
      hello
    </div>
  </a>
</li>
`;
